--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 class="h1">Hello postcss!</h1>
+  <div id="#root"></div>
+  
   <script type="module" src="index.js"></script>
 </body>
 </html>
