--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="src/app/style.css">
 </head>
 <body>
-  <div id="#root"></div>
-  
-  <script type="module" src="index.js"></script>
+  <div id="root"></div>
+
+  <script type="module" src="src/app/index.ts"></script>
 </body>
 </html>
