--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <body>
   <div id="root"></div>
 
-  <script type="module" src="src/app/index.ts"></script>
+  <script type="module" src="src/app/index.js"></script>
 </body>
 </html>
