--- a/static/index.html
+++ b/static/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Главная</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
-</head>
-<body>
-  <ul>
-    <li>
-      <a href="login.html">Логин</a>
-    </li>
-    <li>
-      <a href="registration.html">Регистрация</a>
-    </li>
-    <li>
-      <a href="profile.html">Профиль</a>
-    </li>
-    <li>
-      <a href="chat.html">Чат</a>
-    </li>
-    <li>
-      <a href="404.html">404</a>
-    </li>
-    <li>
-      <a href="500.html">500</a>
-    </li>
-  </ul>
-</body>
-</html> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Главная</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <ul>
+      <li>
+        <a href="login.html">Логин</a>
+      </li>
+      <li>
+        <a href="registration.html">Регистрация</a>
+      </li>
+      <li>
+        <a href="profile.html">Профиль</a>
+      </li>
+      <li>
+        <a href="chat.html">Чат</a>
+      </li>
+      <li>
+        <a href="404.html">404</a>
+      </li>
+      <li>
+        <a href="500.html">500</a>
+      </li>
+    </ul>
+  </body>
+</html>
