feat(block): use new block for auth form

--- a/static/404.html
+++ b/static/404.html
@@ -15,6 +15,6 @@
   <body>
     <div id="root"></div>
 
-    <script type="module" src="../src/app/pages/page-404.ts"></script>
+    <!-- <script type="module" src="../src/app/pages/page-404.ts"></script> -->
   </body>
 </html>
