--- a/static/registration.html
+++ b/static/registration.html
@@ -15,6 +15,6 @@
   <body>
     <div id="root"></div>
 
-    <script type="module" src="../src/app/pages/register-page.ts"></script>
+    <!-- <script type="module" src="../src/app/pages/register-page.ts"></script> -->
   </body>
 </html>
