refactor(block): use new block for 404 & 500 pages

--- a/static/500.html
+++ b/static/500.html
@@ -15,6 +15,6 @@
   <body>
     <div id="root"></div>
 
-    <!-- <script type="module" src="../src/app/pages/page-500.ts"></script> -->
+    <script type="module" src="../src/app/pages/page-500.ts"></script>
   </body>
 </html>
