--- a/static/index.html
+++ b/static/index.html
@@ -13,25 +13,7 @@
     />
   </head>
   <body>
-    <ul>
-      <li>
-        <a href="login.html">Логин</a>
-      </li>
-      <li>
-        <a href="registration.html">Регистрация</a>
-      </li>
-      <li>
-        <a href="profile.html">Профиль</a>
-      </li>
-      <li>
-        <a href="chat.html">Чат</a>
-      </li>
-      <li>
-        <a href="404.html">404</a>
-      </li>
-      <li>
-        <a href="500.html">500</a>
-      </li>
-    </ul>
+    <div id="root"></div>
+    <script type="module" src="../src/app/index.ts"></script>
   </body>
 </html>
